--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<header>
 		<div class="someAbout wow fadeInDown">
 			<h1>Привет! я Алексей</h1>
-			<h3>Я <span class='o'>-<span class='y'>-</span>-</span> web - разработчик, которы делает свои работы добросовесно. И если у вас есть предложение или идея, то я готов воссоздать эту идею в сайт с возможно небольшой магией! На мне техническая сторона ф на вас идеи и желание их воплатить в виде сайта</h3>
+			<h3>Я <span class='o'>-<span class='y'>-</span>-</span> web - разработчик, которы делает свои работы добросовестно. И если у вас есть предложение или идея, то я готов воссоздать эту идею в сайт с возможно небольшой магией! На мне техническая сторона ф на вас идеи и желание их воплатить в виде сайта</h3>
 		</div>
 	</header>
 
@@ -176,7 +176,10 @@
 			<h1 class='wow fadeInRight'>Я РАЗРАБОТЧИК!</h1>
 			<h3 class='wow fadeInRight'>Разрабатываю пирложения и веб системы на фреймворке REACT , с использованием нативноых HTML, JS, CSS, SCSS!</h3>
 		</div>
-	</section>	
+	</section>
+	<footer>
+		<img src="media/footer.png" alt="footerF fon">
+	</footer>
 
 
 
