test my web site

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<button id='profBut' value='contact'>Контакты</button>
 		</div>
 		<div class="nav__social">
-			<a href='https://instagram.com/lexausov31' target="__blank"><img src="https://static.wixstatic.com/media/01c3aff52f2a4dffa526d7a9843d46ea.png/v1/fill/w_28,h_28,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/01c3aff52f2a4dffa526d7a9843d46ea.png" alt=""></a>
-			<a href='https://vk.com/lesgauil'  taget='__blank'><img src="./media/vk_black.png" alt=""></a>
+			<a href='https://instagram.com/lexausov31' target="__blank"><img src="./media/instagram_black.webp" alt=""></a>
+			<a href='https://vk.com/lesgauil'  taget='__blank'><img src="./media/vk_black.webp" alt=""></a>
 		</div>
 		<div class="portfolio">
 			<div class="cross"></div>
@@ -66,8 +66,8 @@
 					<h3>И все что вы пожелаете  ;)</h3>
 
 					<div class="social__network nav__social">
-						<a href='https://vk.com/lesgauil'  taget='__blank'><img src="./media/vk_white.png" alt=""></a>
-						<a href="https://instagram.com/lexausov31" taget='__blank'><img src="https://static.wixstatic.com/media/81af6121f84c41a5b4391d7d37fce12a.png/v1/fill/w_28,h_28,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/81af6121f84c41a5b4391d7d37fce12a.png" alt="" taget='__blank'></a>
+						<a href='https://vk.com/lesgauil'  taget='__blank'><img src="./media/vk_white.webp" alt=""></a>
+						<a href="https://instagram.com/lexausov31" taget='__blank'><img src="./media/instagram.webp" alt="" taget='__blank'></a>
 					</div>
 				</div>
 				<form action="send.php" method="POST">
@@ -95,8 +95,8 @@
 					
 					<a href="mailto:usov.lesha2017@gmail.com">usov.lesha2017@gmail.com</a>
 					<div class="social__network nav__social">
-						<a href='https://vk.com/lesgauil'  taget='__blank'><img src="./media/vk_white.png" alt=""></a>
-						<a href="https://instagram.com/lexausov31" taget='__blank'><img src="https://static.wixstatic.com/media/81af6121f84c41a5b4391d7d37fce12a.png/v1/fill/w_28,h_28,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/81af6121f84c41a5b4391d7d37fce12a.png" alt="" taget='__blank'></a>
+						<a href='https://vk.com/lesgauil'  taget='__blank'><img src="./media/vk_white.webp" alt=""></a>
+						<a href="https://instagram.com/lexausov31" taget='__blank'><img src="./media/instagram.webp" alt="" taget='__blank'></a>
 					</div>
 				</div>
 				<form action="send.php" method="POST">
@@ -108,10 +108,10 @@
 					<button type='submit' ><h3>отправить</h3></button>
 				</form>
 			</div>
-			<div class="nav__gifs">
-				<img src="https://static.wixstatic.com/media/50bacb_88e1211e975b4475a8799b42662c9071~mv2.gif" alt="">
-				<img src="https://static.wixstatic.com/media/50bacb_578771cc0a4441699eb72220f77531ec~mv2.gif" alt="">
-			</div>
+			<sourse class="nav__gifs">
+				<video src="./media/women.mp4" autoplay loop></video>
+				<video src="./media/men.mp4" autoplay loop></video>
+			</sourse>
 
 		</div>
 	</nav>
@@ -175,7 +175,7 @@
 		</div>
 	</section>
 	<footer>
-		<img src="media/footer.png" alt="footerF fon">
+		<img src="media/footer.webp" alt="footerF fon">
 	</footer>
 
 
