--- a/index.html
+++ b/index.html
@@ -17,7 +17,55 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Caveat:wght@500&family=Comfortaa:wght@500&family=Russo+One&display=swap" rel="stylesheet">
 
+	<style>
+		html,body{
+		scroll-behavior: smooth;
+		overflow-x: hidden;
+		background: #fff;
+	}
 
+	*{
+		box-sizing: border-box;
+		padding: 0;
+		margin: 0;
+		font-size: 20px;
+		text-decoration: none;
+		list-style: none;
+		transition: .3s;
+	}
+
+	:root{
+		--green: rgb(0, 192, 129);
+		--white: #ffffff;
+		--blue: rgb(61, 145, 219);
+		--red: rgb(237, 24, 70);
+		--cyan:  #41d36b;
+		--lred: rgb(234, 35, 43);
+		--black: black;
+		--gray:  lightgray;
+		--index: calc(1vh + 1vw);
+	}
+	h1{
+		font-family: 'russo one', sans-serif;
+		font-size: calc(var(--index)*2.1);
+		text-align: center;
+	}
+	h3{
+		font-family: 'Comfortaa', cursive;
+		font-size: calc(var(--index)*1.5);
+		color: var(--white);
+		font-weight: lighter;
+	}
+
+
+
+
+	h6 {
+		font-family: 'Comfortaa', cursive;
+		font-size: 16px;
+	}
+
+	</style>
 
 
 </head>
