--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Caveat:wght@500&family=Comfortaa:wght@500&family=Russo+One&display=swap" rel="stylesheet">
 
 	<style>
@@ -157,8 +158,8 @@
 				</form>
 			</div>
 			<sourse class="nav__gifs">
-				<video src="./media/women.mp4" autoplay loop></video>
-				<video src="./media/men.mp4" autoplay loop></video>
+				<video src="./media/women.mp4" autoplay loop type='video/mp4'></video>
+				<video src="./media/men.mp4" autoplay loop type='video/mp4'></video>
 			</sourse>
 
 		</div>
