--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 			<div class="portfolio__item">
 				<a href="https://usovl.000webhostapp.com" target="__blank">
-					<img src="./media/items/moishkafkupe.png" alt="moishkafkupe">
+					<img src="./media/items/moishkafkupe.webp" alt="moishkafkupe">
 				</a>
 			</div>
 
