--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
 					<img src="./media/items/moishkafkupe.webp" alt="moishkafkupe">
 				</a>
 			</div>
+			<div class="portfolio__item">
+				<a href="https://ultar31.github.io/WOODER/" target="__blank">
+					<img src="./media/items/WOODER.webp" alt="WOODER">
+				</a>
+			</div>
 
 		</div>
 		<div class="about">
