add Password Generator

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 					<img src="./media/items/WOODER.webp" alt="WOODER">
 				</a>
 			</div>
+			<div class="portfolio__item">
+				<a href="https://ultar31.github.io/PasswordGenerator" target="__blank">
+					<img src="./media/items/passwordGen.webp" alt="passwordGen">
+				</a>
+			</div>
 
 		</div>
 		<div class="about">
