add more projects

--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
 					<img src="./media/items/passwordGen.webp" alt="passwordGen">
 				</a>
 			</div>
+			<div class="portfolio__item">
+				<a href="https://ultar31.github.io/TypingTest/" target="__blank">
+					<img src="./media/items/Скорость печати.png" alt="passwordGen">
+				</a>
+			</div>
+			<div class="portfolio__item">
+				<a href="https://ultar31.github.io/BeautifulScroll/" target="__blank">
+					<img src="./media/items/Scroll.png" alt="passwordGen">
+				</a>
+			</div>
+
 
 		</div>
 		<div class="about">
